@startuml DockCode


class DockController { 
	+GetAllDocks()
	+GetDockByName(string name)
	+GetDockById(int id)
	+GetDockByLocation(string location)
    +GetDocksByVesselTypes([FromBody] List<string> vesselTypeNames)
	+PutDock(long id, DockDTO dockDTO)
	+PostDock(DockDTO dockDTO)
}

class DockService {
	+GetAllDocks()
	+GetDockByName(string name)
	+GetDockById(int id)
	+GetDockByLocation(string location)
    +GetDocksByVesselTypes(List<string> vesselTypesNames)
	+AddDock(DockDTO dockDTO, List<string> errorMessages)
	+UpdateDock(long id, DockDTO dockDTO, List<string> errorMessages)
}

class DockDTO{
    -Id: long
    -Name: string
    -Location: string
    -Length: int
    -Depth: int
    -MaxDraft: int
    -VesselTypesAllowed : List<string>
    -LastModifiedAt : DateTime
    +ToDTO(Dock dock)
}


interface IDockRepository{
    +GetDockAsync()
    +GetDockByNameAsync(string name)
    +GetDockByIdAsync(long id)
    +GetDockByLocationAsync(string location)
    +GetDocksByVesselTypesAsync(IEnumerable<VesselType> vesselTypes)
    +AddDock(Dock dock)
    +Update(Dock dock, List<string> errorMessages)
    +DockExists(long id)
}

interface IVesselTypeRepository{
    +GetVesselTypesAsync()
    +GetVesselTypeByNameAsync(string name)
    +GetVesselTypeByIdAsync(long id)
    +GetVesselTypeByDescriptionAsync(string description)
    +AddVesselType(VesselType vesselType)
    +Update(VesselType vesselType, List<string> errorMessages)
    +VesselTypeExists(long id)
}

class VesselTypeRepository{
    +GetVesselTypesAsync()
    +GetVesselTypeByNameAsync(string name)
    +GetVesselTypeByIdAsync(long id)
    +GetVesselTypeByDescriptionAsync(string description)
    +VesselTypeExists(long id)VesselTypeExists(long id)
    +AddVesselType(VesselType vesselType)
    +Update(VesselType vesselType, List<string> errorMessages)
}


class DockRepository{
    +GetDockAsync()
    +GetDockByNameAsync(string name)
    +GetDockByIdAsync(long id)
    +GetDockByLocationAsync(string location)
    +GetDocksByVesselTypesAsync(IEnumerable<VesselType> vesselTypes)
    +AddDock(Dock dock)
    +Update(Dock dock, List<string> errorMessages)
    +DockExists(long id)
}


class Dock{
    -Id: long
    -Name: string
    -Location: string
    -Length: int
    -Depth: int
    -MaxDraft: int
    -VesselTypesAllowed : List<VesselType>
    -LastModifiedAt : DateTime
    +AddVesselType(VesselType vesselType)
    +ValidateName(string name)
    +ValidateLocation(string location)
    +ValidateLength(int length)
    +ValidateDepth(int depth)
    +ValidateMaxDraft(int maxDraft)
    +ValidateVesselTypes(List<VesselType> vesselTypes)
    +ChangeName(string name)
    +ChangeLocation(string location)
    +ChangeLength(int length)
    +ChangeDepth(int depth)
    +ChangeMaxDraft(int maxDraft)
    +ChangeVesselTypesAlowed(List<VesselType> vesselTypes)
}

class DockMapper{
    +ToDomain(DockDataModel dockDM)
    +ToDataModel(Dock dock)
    +UpdateDataModelAsync(DockDataModel dockDM, Dock dock, DbContext context)
}

interface IDockFactory{
    +NewDock(string name, string location, int length, int depth, int maxDraft, List<VesselType> vesselTypes)
}

class DockDataModel{
    -Id: long
    -Name: string
    -Location: string
    -Length: int
    -Depth: int
    -MaxDraft: int
    -VesselTypesAllowed : List<VesselTypeDataModel>
    -LastModifiedAt : DateTime
}

class DockFactory{
    +NewDock(string name, string location, int length, int depth, int maxDraft, List<VesselType> vesselTypes)
}


DockController --> DockService: uses 
DockService --> IDockRepository: uses
DockService --> IVesselTypeRepository: uses
DockService --> DockDTO: uses

DockRepository --> DockMapper: uses
DockMapper --> DockDataModel : uses
DockMapper --> IDockFactory : uses
DockFactory --> Dock: creates


DockFactory .up.|> IDockFactory : implements

DockRepository ..|> IDockRepository : implements
VesselTypeRepository .up.|> IVesselTypeRepository : implements
@enduml